Correction du test MetricsTrackerTest pour utiliser onEpochStart et améliorer les assertions